k8s/ingress/aly-codes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: aly-codes, namespace: aly-codes }
spec:
  ingressClassName: traefik
  tls: [{ hosts: [aly.codes, www.aly.codes], secretName: aly-codes-tls }]
  rules:
    - host: aly.codes
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: aly-codes, port: { name: http } } },
              },
            ],
        }
    - host: www.aly.codes
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: aly-codes, port: { name: http } } },
              },
            ],
        }
