k8s/ingress/atbbs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: atbbs-web, namespace: atbbs }
spec:
  ingressClassName: traefik
  tls: [{ hosts: [atbbs.aly.town], secretName: atbbs-tls }]
  rules:
    - host: atbbs.aly.town
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: atbbs-web, port: { name: http } } },
              },
            ],
        }
