k8s/ingress/morgan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: morgan, namespace: morgan }
spec:
  ingressClassName: traefik
  tls:
    [
      {
        hosts: [morgantamayo.com, www.morgantamayo.com],
        secretName: morgan-tls,
      },
    ]
  rules:
    - host: morgantamayo.com
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: morgan, port: { name: http } } },
              },
            ],
        }
    - host: www.morgantamayo.com
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: morgan, port: { name: http } } },
              },
            ],
        }
