k8s/ingress/morsels.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: morsels, namespace: morsels }
spec:
  ingressClassName: traefik
  tls:
    [{ hosts: [morsels.blue, www.morsels.blue], secretName: morsels-blue-tls }]
  rules:
    - host: morsels.blue
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: morsels, port: { name: http } } },
              },
            ],
        }
    - host: www.morsels.blue
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: morsels, port: { name: http } } },
              },
            ],
        }
