k8s/ingress/skytrace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: skytrace, namespace: skytrace }
spec:
  ingressClassName: traefik
  tls: [{ hosts: [skytrace.aly.town], secretName: skytrace-tls }]
  rules:
    - host: skytrace.aly.town
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: skytrace, port: { name: http } } },
              },
            ],
        }
