k8s/ingress/slingshot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: slingshot, namespace: slingshot }
spec:
  ingressClassName: traefik
  tls: [{ hosts: [slingshot.aly.town], secretName: slingshot-tls }]
  rules:
    - host: slingshot.aly.town
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: slingshot, port: { name: http } } },
              },
            ],
        }
