k8s/ingress/snrld.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: snrld, namespace: snrld }
spec:
  ingressClassName: traefik
  tls: [{ hosts: [snarled.aly.town], secretName: snrld-tls }]
  rules:
    - host: snarled.aly.town
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend: { service: { name: snrld, port: { name: http } } },
              },
            ],
        }
