k8s/ingress/vaultwarden.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: vaultwarden, namespace: vaultwarden }
spec:
  ingressClassName: traefik
  tls:
    [{ hosts: [vault.cute.haus, vault.aly.town], secretName: vaultwarden-tls }]
  rules:
    - host: vault.cute.haus
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend:
                  { service: { name: vaultwarden, port: { number: 80 } } },
              },
            ],
        }
    - host: vault.aly.town
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend:
                  { service: { name: vaultwarden, port: { number: 80 } } },
              },
            ],
        }
